# kubot

./: LICENSE  Makefile  README.md  TODO.md  consumer.py  dispatcher.py
.github/workflows/: build.yaml  ci.yaml  ci_kubot.yaml  hello-poetry.yaml  hello-world.yaml  test.yaml  tests.yaml  version.yaml
clients/example-bot/: pyproject.toml
clients/example-bot/example_bot/: __main__.py  comment_reader.py  stream_reader.py  submission_reader.py
dispatcher/: Makefile  config-example.yaml  pyproject.toml
dispatcher/kubot_dispatcher/: __init__.py  __main__.py  config.py  dispatcher.py
dispatcher/src/: __main__.py  config-schema.yaml  config.py  exceptions.py
dispatcher/tests/: test_config.py  test_dispatcher.py
dispatcher/tests/config-examples/: config_bad_1.yaml  config_good_1.yaml
docs/: CODEOWNERS
package/: pyproject.toml
package/kubot/: __init__.py  config.py  dispatcher.py  exceptions.py
package/kubot/client/: __init__.py  kubot_client.py  stream_handler.py
package/kubot/dispatcher/: __init__.py  config-schema.yaml  kubot_dispatcher.py  kubot_dispatcher_config.py  model_serialiser.py
package/tests/: test_config.py  test_dispatcher.py
package/tests/config-examples/: config_good_1.yaml
package/tests/dispatcher/: test_config.py  test_dispatcher.py  test_model_serialiser.py
utils/: version-bump
