[tool.poetry]
name = "kubot-dispatcher"
version = "0.0.1"
description = ""
authors = ["Maksym Lisogorskyi <m.lisogorskyi@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
jsonschema = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
