[tool.poetry]
name = "kubot"
version = "0.1.5"
description = ""
authors = ["Maksym Lisogorskyi <m.lisogorskyi@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
jsonschema = "^4.2.1"
asyncpraw = "^7.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-flake8 = "^1.0.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
