[tool.poetry]
name = "example-bot"
version = "0.1.0"
description = ""
authors = ["Maksym Lisogorskyi <m.lisogorskyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kubot = {path = "../../package/dist/kubot-0.1.5-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
